objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Nonprofit Case Management</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>%3F%3FEscalated</fullName>
        </values>
        <values>
            <fullName>%E2%9D%8E  Closed</fullName>
        </values>
        <values>
            <fullName>Assessment</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Implementation</fullName>
        </values>
        <values>
            <fullName>Monitoring</fullName>
        </values>
        <values>
            <fullName>Planning</fullName>
        </values>
        <values>
            <fullName>Screening</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Support Process</fullName>
        <description>Support process used by all case record types.</description>
        <isActive>true</isActive>
        <values>
            <fullName>%3F%3FEscalated</fullName>
        </values>
        <values>
            <fullName>%E2%8F%B1  Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>%E2%9A%99%EF%B8%8F  Working</fullName>
        </values>
        <values>
            <fullName>%E2%9D%8E  Closed</fullName>
        </values>
        <values>
            <fullName>%E2%AD%90%EF%B8%8F  New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reply Received</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CSAT__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>CSAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Assignment_Timestamp__c</fullName>
        <label>Case Assignment Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Feedback__c</fullName>
        <description>Feedback field used for the sentiment analysis demo</description>
        <label>Case Feedback</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DB_Case_Duration_Hours__c</fullName>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>DB Case Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Hours__c</fullName>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>DB Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime_Closed_c__c</fullName>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Opened_c__c</fullName>
        <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Contact_Close__c</fullName>
        <defaultValue>true</defaultValue>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove. Used to mark cases that are closed on first contact, without requiring additional engagement with the customer.  Off by default.  Driven by workflow rule.</description>
        <label>First Contact Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MilestoneStatus__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Milestone Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Voucher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Offer Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity</relationshipLabel>
        <relationshipName>R00N4S000002Z5GTUA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family_KB__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial_Products</fullName>
                    <label>Commercial Products</label>
                </value>
                <value>
                    <fullName>Residential Products</fullName>
                </value>
                <value>
                    <fullName>Turbine</fullName>
                </value>
                <value>
                    <fullName>Battery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>What: used in the Sales Analytics. Do NOT REMOVE</description>
        <formula>Product.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Article_Helpful_Reason__c</fullName>
        <label>Article Helpful Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDO_Article_Helpful__c</fullName>
        <label>Article Helpful</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Einstein_Discovery_Leading_Causes__c</fullName>
        <description>What: Used in Einstein Discovery Apex classes</description>
        <label>ED Leading Causes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SDO_Einstein_Discovery_Outcome__c</fullName>
        <description>What: Used in Einstein Discovery Apex classes</description>
        <label>ED Predicted CSAT</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Einstein_Discovery_Prescription__c</fullName>
        <description>What: Used in Einstein Discovery Apex classes</description>
        <label>ED Prescription</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SDO_OMS_Order_Summary_Related__c</fullName>
        <formula>NOT( ISBLANK( SDO_OMS_Order_Summary__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Summary Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_OMS_Order_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Lookup to Order Summary Object</description>
        <label>Order Summary</label>
        <referenceTo>OrderSummary</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Quality_Score__c</fullName>
        <description>What: This field is used by the &quot;Quality Score by Agent&quot; component on the Service Executive Dashboard.  It indicates the &quot;quality&quot;--typically a post-call assessment by supervisor or quality-control personnel--that has been awarded to a case.  This is a number field, manually updated, but it could be accessed by a quality control system.</description>
        <label>Quality Score</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_City__c</fullName>
        <description>What: SFS/FSL Field for cases.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Country__c</fullName>
        <description>What: used by FSL/SFS team for location</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_State__c</fullName>
        <description>What: SFS Field for location</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Street__c</fullName>
        <description>What: SFS Field for Location</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: SFS Field for Work Type Lookup</description>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Zip__c</fullName>
        <description>What: Used by SFS for Cases</description>
        <label>Zip</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Servcie_Response_Time_mins__c</fullName>
        <description>What: Used in reports</description>
        <label>Response Time (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Agent_Interactions__c</fullName>
        <label>Agent Interactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Article_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Helper field for KCS Create Article flow and Next Best Action recommendation. Flag set to True during the KCS Create Article flow, and referenced in the Simple NBA strategy to determine whether or not to offer up the Create Article recommendation.</description>
        <inlineHelpText>Article created using the Create Article flow through either the dynamic button or the Next Best Action recommendation</inlineHelpText>
        <label>Article Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Service_CES_Score_Lower_Threshold__c</fullName>
        <label>CES Score Lower Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_CES_Score_Upper_Threshold__c</fullName>
        <label>CES Score Upper Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Channel__c</fullName>
        <description>What: Displays an image for the channel the case came from.</description>
        <formula>IMAGE( CASE( Origin, 
&quot;Phone&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Phone.png&quot;, 
&quot;Email&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Email.png&quot;, 
&quot;Chat&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Chat.png&quot;, 
&quot;Website&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Web.png&quot;, 
&quot;Web&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Web.png&quot;,  
&quot;Community&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Community.png&quot;, 
&quot;Mobile Device&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Mobile.png&quot;, 
&quot;Q&amp;A&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Automatic.png&quot;, 
&quot;Facebook&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Facebook.png&quot;, 
&quot;Twitter&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Twitter.png&quot;, 
&quot;Google&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Google.png&quot;, 
&quot;Instagram&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Instagram.png&quot;, 
&quot;LinkedIn&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_LinkedIn.png&quot;, 
&quot;Text&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_SMS.png&quot;, 
&quot;SMS&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_SMS.png&quot;, 
&quot;Slack&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/icon_slack.png&quot;,

&quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Automatic.png&quot; ),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_ChatKey__c</fullName>
        <description>What: Einstein Chatbot uses this to store LiveAgentSessId and is also referenced by trigger on Live Chat Transcript records.Who: Service Team</description>
        <label>ChatKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Close_Summary__c</fullName>
        <description>What: Short summary of actions taken to resolve the Case. Used in KCS Flows</description>
        <inlineHelpText>Short summary of actions taken to resolve the Case.</inlineHelpText>
        <label>Close Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Contact_Reason__c</fullName>
        <description>Who: Katie Gannon What: The customer contact reason drafted by Einstein at the end of a conversation between agent and customer. Used in Einstein Work Summaries</description>
        <inlineHelpText>The customer contact reason.</inlineHelpText>
        <label>Contact Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Cost__c</fullName>
        <description>What: used in reports</description>
        <formula>Case ( Origin, &apos;Phone&apos;, 3.5, &apos;Chat&apos;, 2, &apos;Email&apos;, 2, &apos;Website&apos;, 1.5, &apos;Portal&apos;, 1.5, &apos;Chatter Answer&apos;, 1.2, 1.75)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Customer_Effort_Score__c</fullName>
        <label>Customer Effort Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Customer_Type__c</fullName>
        <description>What: Used in Case Wrapup</description>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Small and Medium Business</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Service_Duration__c</fullName>
        <description>What: used in many reports for case duration</description>
        <formula>8*(IF( ISNULL( DateTime_Closed_c__c  ), NOW() -  DateTime_Opened_c__c ,  DateTime_Closed_c__c  -  DateTime_Opened_c__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Email_Response_Time__c</fullName>
        <label>Email Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Est_Cost__c</fullName>
        <description>What: Estimated cost to perform the service tasks.</description>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_NBA_to_Display__c</fullName>
        <description>What: Used to hardcode an NBA to display</description>
        <label>NBA to Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_PTE_Score_Lower_Threshold__c</fullName>
        <label>PTE Score Lower Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_PTE_Score_Upper_Threshold__c</fullName>
        <label>PTE Score Upper Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Percent_vs_Last_Change__c</fullName>
        <label>Percent vs Last Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Propensity_Change_Direction__c</fullName>
        <label>Propensity Change Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Service_Propensity_Improvement_1_Val__c</fullName>
        <label>Propensity Improvement 1 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Propensity_Improvement_1__c</fullName>
        <label>Propensity Improvement 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Propensity_Improvement_2_Val__c</fullName>
        <label>Propensity Improvement 2 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Propensity_Improvement_2__c</fullName>
        <label>Propensity Improvement 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Propensity_Percentage__c</fullName>
        <label>Propensity Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Propensity_Predictor_1_Value__c</fullName>
        <label>Propensity Predictor 1 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Propensity_Predictor_1__c</fullName>
        <label>Propensity Predictor 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Propensity_Predictor_2_Value__c</fullName>
        <label>Propensity Predictor 2 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Propensity_Predictor_2__c</fullName>
        <label>Propensity Predictor 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Propensity_Predictor_3_Value__c</fullName>
        <label>Propensity Predictor 3 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Propensity_Predictor_3__c</fullName>
        <label>Propensity Predictor 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Propensity_to_Escalate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Propensity to Escalate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Resolution__c</fullName>
        <description>Who: Katie Gannon What: The customer contact outcome drafted by Einstein at the end of a conversation between agent and customer. Used in Einstein Work Summaries</description>
        <inlineHelpText>The customer contact outcome.</inlineHelpText>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDO_Service_SLA_Compliant__c</fullName>
        <defaultValue>true</defaultValue>
        <description>What: This field is used by the &quot;SLA Compliance&quot; dashboard on the Service Executive dashboard.  It is checked by default, and unchecked when a case misses a milestone.</description>
        <label>SLA Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Service_SLA_Type__c</fullName>
        <description>What: Created for use by Service Wave to segment cases by SLA.  Entitlements field now accessible to Wave.</description>
        <label>SLA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Service_Send_Email_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: used in the Customer Troubleshoot flow</description>
        <label>Send Email Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Speed_to_Answer__c</fullName>
        <label>Speed to Answer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Surveys_CSAT_Score__c</fullName>
        <label>Survey CSAT Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Surveys_Comment__c</fullName>
        <description>Holds any comments text from the customer responding to Salesforce Surveys</description>
        <label>Survey Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Surveys_NPS_Score__c</fullName>
        <label>Survey NPS Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Surveys_NPS__c</fullName>
        <label>Survey NPS</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Service Territory Lookup</description>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Urgency__c</fullName>
        <description>What: Used in My Resolution report.</description>
        <formula>IMAGE(CASE(Priority,
&quot;Critical&quot;, &quot;https://hls-ido.s3.amazonaws.com/critical.png&quot;,
&quot;High&quot;, &quot;https://hls-ido.s3.amazonaws.com/high.png&quot;,
&quot;Medium&quot;, &quot;https://hls-ido.s3.amazonaws.com/medium.png&quot;,
&quot;Low&quot;, &quot;https://hls-ido.s3.amazonaws.com/low.png&quot;,&quot;https://hls-ido.s3.amazonaws.com/critical.png&quot;),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Status_Indicator__c</fullName>
        <description>What: used on the layout and in reports</description>
        <formula>IMAGE(CASE( Status, 
&quot;New&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_New.png&quot;, 
&quot;Working&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Working.png&quot;, 
&quot;Waiting on customer&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Waiting.png&quot;, 
&quot;Response Received&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Response.png&quot;, 
&quot;Escalated&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Warning.png&quot;, 
&quot;Warning&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Warning.png&quot;, 
&quot;Violation&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_Warning.png&quot;, 
&quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Status_New.png&quot; ),&quot;Status&quot;,24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Sub_Type__c</fullName>
        <description>What: Used in KCS Flows</description>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Setup and Usage</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Order or Invoice</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Survey_CSAT__c</fullName>
        <description>What: Appears to be used in some dm_ flows</description>
        <label>Survey CSAT</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_URLsrc__c</fullName>
        <description>What: This field is to ensure that icons show up properly in Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Volume__c</fullName>
        <description>What: This field is used by the &quot;Channel History&quot; dashboard on the Service Executive dashboard.  It&apos;s a hidden field on the case that represents the number of cases for that time period.  This is because there are not enough cases in the SDO to make a compelling historical dashboard.  It is manually updated, and tied to no workflow rules.</description>
        <label>Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_FieldService__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Send Field Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Open__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Time Open</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Support__c</fullName>
        <description>What: Analytics Demo Data tool field. Do not change</description>
        <label>Type of Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>db_hours_DateTime_Closed_c__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>DateTime_Closed_c__c db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_DateTime_Opened_c__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>DateTime_Opened_c__c db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>demoRecommendations__c</fullName>
        <description>DO NOT CHANGE What: used in Case Classification</description>
        <label>demoRecommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <recordTypes>
        <fullName>NGO_CaseMan_Wraparound_Care_Case_RecordType</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <description>Parent Case for care plans related to programs.</description>
        <label>Wraparound Care</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_ClientCase_RecordType</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <description>Parent Case for care plans related to programs.</description>
        <label>Client Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Donor_Services_Case_RecordType</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <label>Donor Services Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_SFS_Case</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <label>SFS Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Service_Case</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <description>Primary case record type used for most cases.</description>
        <label>Case</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>